task2: fix dropdown inset on small screens

--- a/Task2/tickit/src/app/tasks/tasks.component.css
+++ b/Task2/tickit/src/app/tasks/tasks.component.css
@@ -175,4 +175,7 @@
   .spacer-sm {
     height: 2rem;
   }
+  .dropdown-menu{
+    inset:0px 0px auto auto !important;
+  }
 }
